@@ -2,6 +2,7 @@ Changes
 examples/clean_cover.pl
 examples/clean_date.pl
 examples/clean_edition_number.pl
+examples/clean_number_of_pages.pl
 examples/marc_to_wikidata_print.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
